--- a/index.html
+++ b/index.html
@@ -88,10 +88,30 @@
              <div data-value="ReactJS"><ion-icon name="logo-react"></ion-icon> ReactJS</div>
          </div>
      </div>
-     <div class="search_container"><span class="icon"><ion-icon name="search-outline"></ion-icon></span><input type="text" placeholder="Search.."/></div>
+     <div class="search_container">
+      <span class="icon">
+        <ion-icon name="search-outline"></ion-icon>
+      </span>
+      <input type="text" placeholder="Search.."/>
+    </div>
      <div class="drag">Dragabble Div. I am dragabble.</div> 
-     <div class="loading"><span class="loading_text">Loading...</span></div>
-     <div class="ribbon"><h2 class="ribbon_text">Best Selling</h2></div>
+     <div class="loading">
+       <span class="loading_text">Loading...</span>
+      </div>
+     <div class="ribbon">
+       <h2 class="ribbon_text">Best Selling</h2>
+      </div>
+     <!-- <div class="shapes">
+       <div class="circle"> 
+         <h2 class="text">Circle</h2>
+        </div>
+        <div class="square"> 
+          <h2 class="text">Square</h2>
+         </div>
+         <div class="oval">
+            <h2 class="text">Oval</h2>
+          </div>
+      </div> -->
      <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
      <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
      <script src="./script.js"></script>
